--- a/main.html
+++ b/main.html
@@ -7,8 +7,74 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
+    <table style="width: 100%; height: 100%" border="1"; border-collapse:collapse; text-align:center; >
+		
+      <tr>
+		  <td>
+			  <table border="1">
+				  <thead>
+					  <tr>
+						  <th colspan="2">Nested Table 2</th>
+					  </tr>
+					  <tr>
+						  <th>Column 1</th>
+						  <th>Column 2</th>
+					  </tr>
+				  </thead>
+				  <tr>
+					  <td>abc</td>
+					  <td>def</td>
+				  </tr>
+			  </table>
+		  </td>
+		  <td>
+			  <table border="1">
+				  <thead>
+					  <tr>
+						  <th>Nested Table 1</th>
+					  </tr>
+				  </thead>	  
+					  <tr>
+						  <td> 
+							  <ul>
+							  <li>List item 1</li>
+							  <li>List item 1</li>
+							  <li>List item 1</li>
+						      </ul>
+						  </td>
+						 
+					  </tr>				  
+			  </table>
+		  </td>
+	  </tr>
+		     <tr>
+		  <td>
+			  <table border="1">
+				  <thead>
+					  <tr>
+						  <th colspan="2">Nested Table 3</th>
+					  </tr>
+				  </thead>
+				  <tr>
+					  <td>Nested Table</td>
+					  <td>Demo Continued</td>
+				  </tr>
+				  
+			  </table>
+		  </td>
+		  <td>
+			  <table border="1">
+				  <thead>
+					  <tr>
+						  <th>Nested Table 4</th>
+					  </tr>
+				  </thead>
+				  <tr style="background-color:black;">
+					  <td style="color:white;">HTML</td>
+				  </tr>
+			  </table>
+		  </td>
+	  </tr>
     </table>
   </body>
 </html>
